--- a/GITS.Hrms.WebSite/Site.master
+++ b/GITS.Hrms.WebSite/Site.master
@@ -7,8 +7,9 @@
     <base target="_self" />
     <link  href="Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="Content/mySheet.css" rel="stylesheet" type="text/css" />
-    <script language="javascript "src="../Scripts/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script language="javascript "src="../Scripts/bootstrap.min.js" type="text/javascript"></script>
+    <script language="javascript" src="../Scripts/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script language="javascript" src="../Scripts/jquery.cookie.js" type="text/javascript"></script>
+    <script language="javascript" src="../Scripts/bootstrap.min.js" type="text/javascript"></script>
     <script language="javascript" src="../Scripts/myScript.js" type="text/javascript"></script>
 
 </head>
