--- a/GITS.Hrms.WebSite/Site.master
+++ b/GITS.Hrms.WebSite/Site.master
@@ -10,6 +10,7 @@
     <script language="javascript" src="../Scripts/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script language="javascript" src="../Scripts/jquery.cookie.js" type="text/javascript"></script>
     <script language="javascript" src="../Scripts/bootstrap.min.js" type="text/javascript"></script>
+    <script language="javascript" src="../Script/CalendarControl.js" type="text/javascript"></script>
     <script language="javascript" src="../Scripts/myScript.js" type="text/javascript"></script>
 
 </head>
